--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/zwh?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost:3306/boot?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.thymeleaf.cache=false
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+mybatis.type-aliases-package=com.example.demo.entity
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
